--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
             left: 50%;
             transform: translate(-50%, 0%);
         }
+        .searchbox{
+            position: absolute;
+            top:40%;
+            left: 50%;
+            transform: translate(-50%, 150%);
+        }
+        .submit{
+            position: absolute;
+            top: 52%;
+            left: 50%;
+            transform: translate(-50%, 0%);
+        }
     </style>
     <head>
 
@@ -19,6 +31,8 @@
     <body>
         <div class="basic">
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
+            <input class="searchbox"type="text" placeholder="Search">
+            <button class="submit" type="button">Submit</button>
         </div>
 
     </body>
