--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
         li{
             float:right;
         }
+    
+        .footbar{
+            position: absolute;
+            bottom: 2%;
+        }
+        .footbar-r{
+            position: absolute;
+            bottom: 2%;
+            right: 2%;
+        }
         li a{
             display: block;
             font-size: 12px;
@@ -55,6 +65,21 @@
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
             <input class="searchbox"type="text" placeholder="Search">
             <button class="submit" type="button">Google Search</button>
+        </div>
+        <div class="footbar">
+            <ul>
+                <li><a href= "">How Search works</a></li>
+                <li><a href= "">Business</a></li>
+                <li><a href= "">Advertising</a></li>
+                <li><a href= "">About</a></li>                
+            </ul>
+        </div>
+        <div class="footbar-r">
+            <ul>
+                <li><a href= "">Settings</a></li>
+                <li><a href= "">Terms</a></li>
+                <li><a href= "">Privacy</a></li>
+            </ul>
         </div>
 
     </body>
